CVS code -
- General:
	- Miscellaneous comment fixes. (DLR)
	- After (re)initializing the terminal, make sure the cursor is
	  always turned on.  Changes to do_alt_speller(),
	  handle_sigwinch(), and main(). (DLR)
- chars.c:
  make_mbchar()
	- Remove unneeded assert. (DLR)
  move_mbleft()
	- Fix assert to reference the proper variable, so that nano
	  builds with DEBUG defined again. (Mike Frysinger, found by
	  Dmitri Vassilenko)
- files.c:
  get_full_path()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
  do_browser()
	- Rename variable lineno to fileline to avoid confusion. (DLR)
  do_browse_from()
	- Rework handling of the results of getcwd() in order to avoid
	  segfaults if they fail, and to remove uses of the nonportable
	  GNU extension where passing a size of 0 will get a string as
	  long as we need. (DLR)
- nano.c:
  help_init()
	- When calculating allocsize, take multibyte characters into
	  account, and keep the column number limits consistent. (DLR)
  print1opt()
	- Don't include longflag if HAVE_GETOPT_LONG isn't defined.
	  Rename this function to print1opt_full(), leave out the
	  longflag parameter if HAVE_GETOPT_LONG isn't defined, and make
	  print1opt() a macro for print1opt_full() that does that
	  without the need for a lot of extra #ifdefs. (David
	  Benbennick)  DLR: Rename print1opt_f() to print1opt_full().
	- Rework the special case of options that are ignored for Pico
	  compatibility so that they display more neatly when
	  HAVE_GETOPT_LONG isn't defined. (DLR)
  usage()
	- Fix erroneous #ifdef that resulted in the -d/--rebinddelete
	  and -k/--cut options' not being printed when NANO_SMALL was
	  defined. (DLR)
  find_paragraph()
	- Fix problem where a search for the next paragraph would skip
	  over certain cases of one-line paragraphs. (DLR)
  do_justify()